# gol

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  main.rs  main_single.rs  shell.nix
src/: file.rs  gui.rs  main.rs  parallel.rs  single.rs  state.rs
