[package]
name = "gol"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
nannou = "0.19.0"
threadpool = "1.8.1"

[[bin]]
name = "gol"
path = "src/main.rs"

[profile.release]
debug = true

