[package]
name = "gol"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.51"
fxhash = "0.2.1"
lazy_static = "1.5.0"
nannou = "0.19.0"
threadpool = "1.8.1"

[[bin]]
name = "gol"
path = "src/main.rs"

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false
debug = false
# lto = "fat"

